Fix modal overflow, revert input width fix (#1029)

--- a/utils/gear-ui/src/components/Modal/Modal.module.scss
+++ b/utils/gear-ui/src/components/Modal/Modal.module.scss
@@ -19,10 +19,7 @@
 
 .modal {
   width: 100%;
-  border: $borderModal;
-  border-radius: $borderRadiusMedium;
   filter: drop-shadow(0px 4px 4px #00000040);
-  overflow: hidden;
 
   &.normal {
     max-width: 400px;
@@ -34,15 +31,26 @@
 }
 
 .header {
+  // border on .header and .body instead of .modal,
+  // cuz otherwise .modal should have overflow: hidden
+  // and we can't cuz modal can have tooltip inside
   display: flex;
   justify-content: space-between;
   padding: 17px 32px 22px;
   background-color: #222225;
+  border-left: $borderModal;
+  border-right: $borderModal;
+  border-top: $borderModal;
+  border-radius: $borderRadiusMedium $borderRadiusMedium 0 0;
 }
 
 .body {
   padding: 32px;
   background-color: #29292b;
+  border-left: $borderModal;
+  border-right: $borderModal;
+  border-bottom: $borderModal;
+  border-radius: 0 0 $borderRadiusMedium $borderRadiusMedium;
 }
 
 .heading {
